# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mcp-bash-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-appender = "0.2"
anyhow = "1.0.98"
rmcp = { version = "0.4.0", features = ["server", "transport-sse-server", "transport-io", "transport-streamable-http-server", "auth"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
askama = { version = "0.14"}
rand = { version = "0.8", features = ["std"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
oauth2 = "5.0"
toml = "0.8"
regex = "1.11.1"
shlex = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = "0.5"
hyper = "1.0"
axum-test = "14.1"

[[bin]]
name = "mcp-bash-server"
path = "src/main.rs"
